# lci

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.md  Documentation.md  Makefile.am  NEWS  README  README.md  README.mkd  TODO  TODO.md  _config.yml  index.html  index.md  lcidoc.html  params.json
.github/workflows/: test.yml
_includes/: head-custom.html
_layouts/: default.html
assets/css/: style.scss
cmake/: FindReadline.cmake
demo/: lci-init.js  lci.data  lci.js  lci.wasm
doc/: CMakeLists.txt  lcidoc.htoc  lcidoc.tex  lcidoc001.html  lcidoc004.html  lcidoc006.html  lcidoc007.html  lcidoc009.html  lcidoc010.html  lcidoc_gr.tex
html/: CMakeLists.txt  lci-init.js  lci.html
html/xterm.js/: local-echo.js
lci/: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  configure.ac  generatecl
lci/doc/: Makefile  Makefile.am  lcidoc.tex  lcidoc_gr.tex
lci/src/: .cvsignore  Makefile  Makefile.am  decllist.c  decllist.h  grammar.c  grammar.h  main.c  parser.c  parser.h  run.c  run.h  termproc.c  termproc.h
src/: .lcirc  ADTMap.c  ADTMap.h  ADTVector.c  decllist.c  decllist.h  grammar.c  grammar.g  grammar.h  main.c  parser.c  parser.h  parser_new.c  queens.lci  run.c  run.h  str_intern.c  str_intern.h  termproc.c  termproc.h
src/k08/: ADTVector.c  ADTVector.h  common_types.h
src/kazlib/: list.c  list.h
stylesheets/: stylesheet.css
web/: index.html
web/doc/: index.html  lcidoc.haux  lcidoc.html  lcidoc002.html  lcidoc003.html  lcidoc005.html  lcidoc008.html
